feat: show production equipment and research detail cards
Add the seven-resource and six-modifier production layout, repair dockyard usage, five creation actions, equipment images, research module effects, blank loading flags and Korean names. Synchronize protocol types and 128-block atlas visibility; include construction control refinements and renderer fixtures.

Client release validation passed. UI fixtures are not multiplayer deployment verification.